httpbin/kustomization/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin-app
  template:
    metadata:
      labels:
        app: httpbin-app
    spec:
      containers:
        - image: docker.io/kennethreitz/httpbin
          name: httpbin
          ports:
            - containerPort: 80
