httpbin/kustomization/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app: httpbin-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
